...
            android:textStyle="bold"

            app:layout_constraintStart_toStartOf="@+id/img_title"
            app:layout_constraintTop_toTopOf="@+id/img_title" />

        <TextView
            android:id="@+id/txt_writer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textStyle="bold"
            android:text="Fate is yfyuf fnhfvhf"
            android:layout_marginTop="20dp"
...
            android:textColor="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Next"
            android:textSize="16dp"
            android:textColor="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
...
